Update canonical link in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="twitter:description" content="Descoperă cele mai frumoase experiențe cadou din România." />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1574974915766-a4195c4f66e9?w=1200&h=630&fit=crop" />
 
-    <link rel="canonical" href="https://experium.ro" />
+    <link rel="canonical" href="https://github.io/Hrelea1/Experium" />
   </head>
 
   <body>
